--- a/style.css
+++ b/style.css
@@ -2,6 +2,34 @@
   --primary-light: #cbd5e1;
   --secondary-light: #e2e8f0;
   --primary-dark: #1e293b;
+
+  /* Spring */
+  --screamin-green: #5cf64a;
+  --inchworm: #87e752;
+  --kelly-green: #43b929;
+  --cotton-candy: #ffcae9;
+  --persian-rose: #ff37a6;
+
+  /* Summer */
+  --rich-black-fogra-29: #000814;
+  --oxford-blue: #001d3d;
+  --prussian-blue: #003566;
+  --mikado-yellow: #ffc300;
+  --gold-web-golden: #ffd60a;
+
+  /* Autumn */
+  --duke-blue: #390099;
+  --jazzberry-jam: #9e0059;
+  --radical-red: #ff0054;
+  --orange-pantone: #ff5400;
+  --amber: #ffbd00;
+
+  /* Winter */
+  --midnight-blue: #03045e;
+  --star-command-blue: #0077b6;
+  --pacific-blue: #00b4d8;
+  --middle-blue: #90e0ef;
+  --light-cyan: #caf0f8;
 }
 
 *,
@@ -34,11 +62,21 @@ body {
 }
 
 .header {
-  max-width: 140rem;
+  color: var(--primary-light);
+  background-color: var(--primary-dark);
+  width: 100%;
 
-  font-size: 2.8rem;
-  padding: 3rem;
-  margin: 0 auto;
+  font-size: 2.2rem;
+  padding: 2.2rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fa-paintbrush {
+  font-size: 3.2rem;
+  margin-right: 1rem;
 }
 
 .main {
@@ -61,12 +99,14 @@ body {
 }
 
 .footer {
-  max-width: 140rem;
+  color: var(--primary-light);
+  background-color: var(--primary-dark);
 
   font-size: 1.6rem;
-  padding: 2rem;
-  margin: 0 auto;
+  padding: 1rem;
+
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -76,8 +116,8 @@ body {
 
 .fa-github {
   font-size: 2.2rem;
-  color: var(--primary-dark);
-  transition: transform 0.4s ease-in-out;
+  color: var(--secondary-light);
+  transition: all 0.4s ease-in-out;
 }
 
 .fa-github:hover {
