--- a/style.css
+++ b/style.css
@@ -92,28 +92,30 @@ body {
 }
 
 .grid {
-  width: 50rem;
-  height: 50rem;
+  display: grid;
   border-radius: 3px;
   background-color: var(--secondary-light);
   box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
     rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
-.footer {
-  color: var(--primary-light);
-  background-color: var(--primary-dark);
-
-  font-size: 1.6rem;
-  padding: 1rem;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.grid-small {
+  grid-template-columns: repeat(16, 1fr);
+  border: 1px rgba(0, 0, 0, 0.404) solid;
 }
 
-.copyright {
-  margin-right: 0.8rem;
+.grid-small > div {
+  width: 4rem;
+  height: 4rem;
+}
+
+.grid-item {
+  border: 1px solid #eee;
+}
+
+.github {
+  position: absolute;
+  right: 10rem;
 }
 
 .fa-github {
@@ -123,5 +125,5 @@ body {
 }
 
 .fa-github:hover {
-  transform: rotate(360deg) scale(1.4);
+  transform: rotate(360deg) scale(2);
 }
