--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body {
   font-size: 2.2rem;
   text-transform: uppercase;
   color: var(--primary-light);
+  text-shadow: 0px 0px 8px #fdf4ffb3;
 
   display: flex;
   align-items: center;
