--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
@@ -159,6 +159,25 @@ body {
 .grid-density > input {
   cursor: pointer;
   margin-bottom: 0.4rem;
+}
+
+.colors {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.colors > a {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  background-color: #001d3d;
+  padding: 1rem 0;
+  cursor: pointer;
+}
+
+.colors > a:not(:last-child) {
+  margin-bottom: 1rem;
 }
 
 .github {
