--- a/style.css
+++ b/style.css
@@ -6,18 +6,24 @@
   --secondary-dark-alternative: #f72585;
 
   /* Spring */
-  --screamin-green: #5cf64a;
-  --inchworm: #87e752;
-  --kelly-green: #43b929;
-  --cotton-candy: #ffcae9;
-  --persian-rose: #ff37a6;
+  --dark-green-x-11: #006400;
+  --ao-english: #008000;
+  --yellow-green-color-wheel: #38b000;
+  --sheen-green: #70e000;
+  --green-lizard: #9ef01a;
+  --electric-lime: #ccff33;
 
   /* Summer */
-  --rich-black-fogra-29: #000814;
-  --oxford-blue: #001d3d;
-  --prussian-blue: #003566;
-  --mikado-yellow: #ffc300;
-  --gold-web-golden: #ffd60a;
+  --rufous: #a40404ff;
+  --international-orange-engineering: #b30505ff;
+  --international-orange-engineering-2: #bd0505ff;
+  --international-orange-engineering-3: #c70505ff;
+  --sinopia: #d5440bff;
+  --fulvous: #de7f11ff;
+  --saffron: #edbf17ff;
+  --maximum-yellow: #f9f91fff;
+  --cadmium-yellow: #f9f110ff;
+  --middle-yellow: #f9e806ff;
 
   /* Autumn */
   --duke-blue: #390099;
@@ -187,22 +193,23 @@ body {
 .spring {
   background: linear-gradient(
     to right,
-    rgba(67, 185, 41, 1) 0%,
-    rgba(92, 246, 74, 1) 20%,
-    rgba(135, 231, 82, 1) 41%,
-    rgba(255, 202, 233, 1) 59%,
-    rgba(255, 55, 166, 1) 100%
+    rgba(204, 255, 51, 1) 0%,
+    rgba(158, 240, 26, 1) 20%,
+    rgba(112, 224, 0, 1) 40%,
+    rgba(56, 176, 0, 1) 60%,
+    rgba(0, 128, 0, 1) 80%,
+    rgba(0, 100, 0, 1) 100%
   );
 }
 
 .summer {
   background: linear-gradient(
     to right,
-    rgba(0, 47, 119, 1) 0%,
-    rgba(1, 64, 136, 1) 20%,
-    rgba(0, 91, 176, 1) 40%,
-    rgba(254, 255, 0, 1) 63%,
-    rgba(255, 214, 10, 1) 100%
+    rgba(254, 255, 0, 1) 0%,
+    rgba(255, 214, 10, 1) 26%,
+    rgba(255, 160, 4, 1) 50%,
+    rgba(222, 96, 0, 1) 75%,
+    rgba(212, 85, 0, 1) 100%
   );
 }
 
