--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
 }
 
@@ -122,6 +122,7 @@ body {
   display: flex;
   flex-direction: column;
   padding: 1.8rem;
+  margin-bottom: 1.8rem;
 }
 
 .grid-settings-title {
@@ -165,15 +166,18 @@ body {
   margin-bottom: 0.4rem;
 }
 
+.paint-settings {
+  margin-bottom: 1.8rem;
+}
+
 .colors {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .colors > a {
-  display: inline-block;
   width: 100%;
+  display: inline-block;
   font-weight: 900;
   text-align: center;
   color: var(--primary-light);
@@ -242,10 +246,6 @@ body {
 
 .lighten {
   background: #e2e8f0;
-}
-
-.github {
-  padding: 1.8rem;
 }
 
 .fa-github {
