--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body {
   align-items: center;
 }
 
-.settings > .grid-settings {
+.grid-settings {
   display: flex;
   flex-direction: column;
   padding: 1.8rem;
@@ -181,7 +181,7 @@ body {
   font-weight: 900;
   text-align: center;
   color: var(--primary-light);
-  padding: 1rem 0;
+  padding: 1rem 0.2rem;
   border: 2px solid var(--primary-light);
   border-radius: 3px;
   text-shadow: 0px 0px 8px #0a030cb3;
@@ -256,4 +256,70 @@ body {
 
 .fa-github:hover {
   transform: rotate(360deg) scale(2);
+}
+
+@media screen and (orientation: portrait) {
+  .header {
+    font-size: 1.4rem;
+    margin: 0.6rem 0;
+  }
+
+  .main {
+    flex: 1;
+    flex-direction: column;
+    border-radius: 0;
+    border: none;
+  }
+
+  .grid {
+    height: 100vmin;
+    width: 100vmin;
+  }
+
+  .settings {
+    flex: 1;
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .grid-settings-title {
+    font-size: 1.6rem;
+  }
+
+  .grid-settings,
+  .paint-settings {
+    padding: 1.4rem;
+    margin: 0;
+  }
+
+  .paint-settings {
+    margin-left: 1rem;
+    margin-top: -1.2rem;
+  }
+
+  .grid-buttons {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .grid-buttons > a {
+    padding: 0.6rem 1.2rem;
+  }
+
+  .colors {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.4rem;
+  }
+
+  .colors > a:not(:last-child) {
+    margin-bottom: 0rem;
+  }
+
+  .github {
+    display: none;
+  }
 }
