--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
   display: flex;
   align-items: center;
 
-  margin-bottom: 2rem;
+  margin: 2rem;
 }
 
 .fa-paintbrush {
@@ -261,7 +261,6 @@ body {
 @media screen and (orientation: portrait) {
   .header {
     font-size: 1.4rem;
-    margin: 0.6rem 0;
   }
 
   .main {
@@ -272,17 +271,20 @@ body {
   }
 
   .grid {
-    height: 100vmin;
-    width: 100vmin;
+    height: 90vmin;
+    width: 90vmin;
+    border: 2px solid var(--primary-light);
+    border-radius: 9px;
   }
 
   .settings {
     flex: 1;
-    width: 100%;
+    width: 90vmin;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 1rem;
+    background: transparent;
   }
 
   .grid-settings-title {
