--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ body {
 }
 
 .settings {
+  position: relative;
   height: 70vmin;
   font-size: 1.4rem;
   color: var(--primary-light);
@@ -121,8 +122,19 @@ body {
 .grid-settings {
   display: flex;
   flex-direction: column;
-  padding: 1.8rem;
-  margin-bottom: 1.8rem;
+  padding: 0 1.8rem;
+  margin-bottom: 4.6rem;
+}
+
+.grid-settings::after {
+  content: '';
+  width: 80%;
+  height: 6px;
+  background: linear-gradient(to right, #6d0a6d 0%, #b5179e 50%, #6d0a6d 100%);
+
+  position: absolute;
+  left: 10%;
+  top: 36%;
 }
 
 .grid-settings-title {
@@ -167,12 +179,16 @@ body {
 }
 
 .paint-settings {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-bottom: 1.8rem;
 }
 
 .colors {
   display: flex;
   flex-direction: column;
+  width: 90%;
 }
 
 .colors > a {
