--- a/css/queries.css
+++ b/css/queries.css
@@ -1,4 +1,8 @@
 @media screen and (orientation: portrait) {
+  html {
+    font-size: 50%;
+  }
+
   body {
     background: linear-gradient(to top, #6d0a6d 0%, #b5179e 50%, #f72585 100%);
   }
@@ -26,24 +30,25 @@
     height: auto;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
-    padding: 0.6rem 0;
+    align-items: baseline;
+    padding: 1rem 0;
   }
 
   .grid-settings-title {
     font-size: 1.6rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.6rem;
   }
 
   .grid-settings,
   .paint-settings {
-    margin: 0;
+    width: 37%;
+    margin: 1rem 0;
     padding: 0;
   }
 
   .grid-settings::after {
     content: '';
-    width: 6px;
+    width: 2px;
     height: 80%;
     background: linear-gradient(
       to bottom,
@@ -53,7 +58,7 @@
     );
 
     position: absolute;
-    left: 49%;
+    left: 50%;
     top: 10%;
   }
 
@@ -63,17 +68,17 @@
   }
 
   .grid-buttons > a {
+    text-align: center;
+    width: 45%;
     padding: 0.6rem 1.2rem;
-  }
-
-  .paint-settings {
-    margin-top: -1.2rem;
+    margin: 1rem 0;
   }
 
   .colors {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1.4rem;
+    width: 100%;
   }
 
   .colors > a:not(:last-child) {
