--- a/css/style.css
+++ b/css/style.css
@@ -88,9 +88,9 @@ body {
 .main {
   display: flex;
   align-items: center;
-  border: 2px solid var(--primary-light);
   border-radius: 9px;
   overflow: hidden;
+  box-shadow: 0px 3px 15px rgb(247, 37, 133, 0.2);
 }
 
 .grid {
@@ -98,8 +98,6 @@ body {
   width: 70vmin;
   height: 70vmin;
   background-color: var(--primary-light);
-  box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em,
-    rgba(90, 125, 188, 0.05) 0px 0.25em 1em;
 }
 
 .grid-item {
@@ -129,7 +127,7 @@ body {
 .grid-settings::after {
   content: '';
   width: 80%;
-  height: 6px;
+  height: 9px;
   background: linear-gradient(to right, #6d0a6d 0%, #b5179e 50%, #6d0a6d 100%);
 
   position: absolute;
@@ -142,6 +140,8 @@ body {
   text-align: center;
   margin-bottom: 1.6rem;
   text-decoration: underline;
+  color: #f72585;
+  text-shadow: 0px 0px 8px #0a030cb3;
 }
 
 .grid-background,
@@ -174,6 +174,7 @@ body {
 }
 
 .grid-density > input {
+  width: 100%;
   cursor: pointer;
   margin-bottom: 0.4rem;
 }
