--- a/css/queries.css
+++ b/css/queries.css
@@ -29,8 +29,7 @@
     width: 85vmin;
     height: auto;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: baseline;
+    align-items: flex-start;
     padding: 1rem 0;
   }
 
@@ -46,20 +45,17 @@
     padding: 0;
   }
 
-  .grid-settings::after {
-    content: '';
+  .divider {
+    align-self: center;
     width: 2px;
-    height: 80%;
+    height: 18rem;
+
     background: linear-gradient(
       to bottom,
       #6d0a6d 0%,
       #b5179e 50%,
       #6d0a6d 100%
     );
-
-    position: absolute;
-    left: 50%;
-    top: 10%;
   }
 
   .grid-buttons {
