--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ body {
 
 .options {
   height: 70vmin;
+  width: 25vmin;
   font-size: 1.4rem;
   color: var(--primary-light);
   background-color: var(--primary-dark);
@@ -117,9 +118,10 @@ body {
 }
 
 .options-grid {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0 1.8rem;
+  padding: 0 3rem;
 }
 
 .divider {
@@ -174,32 +176,22 @@ body {
   cursor: pointer;
 }
 
-.options-paint {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.options-paint-colors,
+.options-shadows-colors {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.8rem;
 }
 
-.options-paint-colors {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-}
-
-.options-paint-colors > a {
-  width: 100%;
-  display: inline-block;
+.options-paint-colors > a,
+.options-shadows-colors > a {
   text-align: center;
   color: var(--primary-light);
-  padding: 1.2rem 1rem;
+  padding: 0.8rem;
   border: 2px solid var(--secondary-light);
   border-radius: 3px;
   text-shadow: 0 0 2px #000;
   cursor: pointer;
-}
-
-.options-paint-colors > a:not(:last-child) {
-  margin-bottom: 1rem;
 }
 
 .spring {
