--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-content: center;
 }
 
 .header {
@@ -77,7 +78,7 @@ body {
   display: flex;
   align-items: center;
 
-  margin: 2rem;
+  margin: 3rem;
 }
 
 .fa-paintbrush {
@@ -189,10 +190,13 @@ body {
   text-align: center;
   color: var(--primary-light);
   padding: 0.8rem;
-  border: 2px solid var(--secondary-light);
-  border-radius: 3px;
+  border: 1px solid var(--secondary-dark);
+  border-radius: 2px;
   text-shadow: 0 0 2px #000;
   cursor: pointer;
+  -webkit-box-shadow: 5px 4px 37px -1px rgba(247, 37, 133, 0.75);
+  -moz-box-shadow: 5px 4px 37px -1px rgba(247, 37, 133, 0.75);
+  box-shadow: 5px 4px 37px -1px rgba(247, 37, 133, 0.75);
 }
 
 .spring {
