--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,8 @@ body {
 .main {
   display: flex;
   align-items: center;
+  border-radius: 9px;
+  overflow: hidden;
   box-shadow: 0px 3px 15px rgb(247, 37, 133, 0.2);
 }
 
@@ -97,6 +99,7 @@ body {
   width: 70vmin;
   height: 70vmin;
   background-color: var(--primary-light);
+  padding: 0.6rem;
 }
 
 .options {
