--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,14 @@ body {
   transform: rotate(360deg) scale(1.4);
 }
 
+a {
+  transition: all 0.2s ease-in-out;
+}
+
+a:hover {
+  opacity: 0.6;
+}
+
 /********************/
 /* INPUT TYPE COLOR */
 /********************/
