--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@ body {
   height: 70vmin;
   background-color: var(--primary-light);
   padding: 0.4rem;
+  cursor: url('../images/brush-cursor.png') 2 20, auto;
 }
 
 .grid-item {
