--- a/css/queries.css
+++ b/css/queries.css
@@ -28,47 +28,29 @@
   .options {
     width: 85vmin;
     height: auto;
-    flex-direction: row;
-    align-items: flex-start;
-    padding: 1rem 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 2.6rem;
+    gap: 1.6rem 3.2rem;
+    align-items: stretch;
   }
 
   .options-heading {
-    font-size: 1.6rem;
-    margin-bottom: 1rem;
+    margin: 0;
+    grid-row: 1;
   }
 
-  .options-grid {
-    flex-basis: 30%;
+  .paint-options {
+    grid-template-columns: repeat(2, 1fr);
   }
 
-  .options-grid,
-  .options-paint,
-  .options-shadows {
-    margin: 1rem 0;
-    padding: 0;
-  }
-
-  .options-grid-buttons > a {
-    width: 45%;
-  }
-
-  .options-paint-colors,
-  .options-shadows-colors {
-    grid-template-columns: repeat(1, 1fr);
+  .shading,
+  .lighten {
+    grid-column: span 1;
   }
 
   .divider {
-    align-self: center;
-    width: 2px;
-    height: 18rem;
-
-    background: linear-gradient(
-      to bottom,
-      #6d0a6d 0%,
-      #b5179e 50%,
-      #6d0a6d 100%
-    );
+    display: none;
   }
 
   .github {
