--- a/css/style.css
+++ b/css/style.css
@@ -152,10 +152,13 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  pointer-events: none;
 }
 
 .btn {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 0.8rem;
   border-radius: 2px;
   cursor: pointer;
@@ -239,14 +242,14 @@ body {
 .grid-options {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  gap: 1.4rem;
+  gap: 1rem;
 }
 
 .grid-density {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 1.2rem 0 0.6rem 0;
+  margin: 1rem 0 0.5rem 0;
 }
 
 .grid-density > label {
