--- a/css/queries.css
+++ b/css/queries.css
@@ -8,12 +8,7 @@
   }
 
   .header {
-    font-size: 1.4rem;
-    margin: 1rem 0;
-  }
-
-  .fa-paintbrush {
-    font-size: 2.4rem;
+    margin: 1.8rem;
   }
 
   .main {
@@ -30,7 +25,7 @@
     height: auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    padding: 2.6rem;
+    padding: 2.2rem;
     gap: 1.6rem 3.2rem;
     align-items: stretch;
   }
@@ -52,6 +47,10 @@
   .github,
   .divider {
     display: none;
+  }
+
+  input[type='color'] {
+    height: 20px;
   }
 }
 
@@ -82,6 +81,10 @@
   input[type='color'] {
     height: 20px;
   }
+
+  .github {
+    display: none;
+  }
 }
 
 @media screen and (orientation: landscape) and (max-height: 420px) {
@@ -89,8 +92,14 @@
     margin: 1rem;
   }
 
+  .grid {
+    width: 75vmin;
+    height: 75vmin;
+  }
+
   .options {
-    width: 50vmin;
+    width: 60vmin;
+    height: 75vmin;
   }
 
   .options-heading {
