--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ body {
 
 .fa-leaf,
 .fa-sun,
-.fa-canadian,
+.fa-canadian-maple-leaf,
 .fa-snowflake {
   font-size: 1.8rem;
   pointer-events: none;
